# fluxforge

backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: health.py  tasks.py  ws.py
backend/app/core/: config.py  lifecycle.py  logger.py
backend/app/database/: base.py  session.py
backend/app/database/models/: __init__.py  task.py
backend/app/execution/: base_worker.py  registry.py  subprocess_runner.py
backend/app/execution/progress/: ffmpeg_parser.py  yt_dlp_parser.py
backend/app/execution/workers/: ffmpeg_worker.py  yt_dlp_worker.py
backend/app/queue/: __init__.py  manager.py  state_machine.py  task_events.py
backend/app/repositories/: task_repository.py
backend/app/schemas/: execution.py  task.py  websocket.py
backend/app/services/: task_service.py
backend/app/websocket/: broadcaster.py  manager.py
backend/data/: fluxforge.db
frontend/: .cta.json  package-lock.json  package.json
frontend/src/components/layout/: app-shell.tsx  error-boundary.tsx
frontend/src/components/workspace/: dashboard-panel.tsx  downloads-panel.tsx  encoder-panel.tsx  history-panel.tsx  presets-panel.tsx  queue-panel.tsx  settings-panel.tsx
frontend/src/hooks/: use-health.ts
frontend/src/lib/api/: client.ts
frontend/src/routes/: __root.tsx  index.tsx
frontend/src/services/api/: tasks-api.ts
frontend/src/services/websocket/: ws-client.ts
frontend/src/stores/: queue-store.ts  task-store.ts  websocket-store.ts  workspace-store.ts
frontend/src/styles/: app.css
frontend/src/types/: api.ts
scripts/: dev.sh
(+4 files in other folders)
