[project]
name = "fluxforge-backend"
version = "0.1.0"
description = "FluxForge backend API"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.36",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "loguru>=0.7.2",
    "aiofiles>=24.1.0",
    "websockets>=13.1",
    "psutil>=6.1.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.28.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "ruff>=0.7.0",
]
